# drf_task

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: urls.py
src/core/: asgi.py  celery.py  settings.py  wsgi.py
src/events/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
src/events/migrations/: 0001_initial.py  0002_alter_event_id_alter_eventvenue_id_alter_event_table.py  0002_eventregistration.py  0003_alter_event_id_alter_eventvenue_id.py  0003_outboxevent.py
src/jwtauth/: apps.py  serializers.py  urls.py  views.py
src/sync/: models.py
src/sync/management/commands/: sync.py
src/sync/migrations/: 0001_initial.py  0002_syncresult_last_synced_event_date.py
